Corrected Implementation for buildTree method